@@ -1,4 +1,4 @@
-FROM openjdk:8 AS build
+FROM gradle:7-jdk11 AS build
 
 RUN mkdir /appbuild
 COPY . /appbuild
@@ -7,10 +7,10 @@ WORKDIR /appbuild
 
 RUN ./gradlew clean build
 
-FROM openjdk:8-jre-alpine
+FROM openjdk:11
 
 ENV APPLICATION_USER 1033
-RUN adduser -D -g '' $APPLICATION_USER
+RUN useradd -ms /bin/bash $APPLICATION_USER
 
 RUN mkdir /app
 RUN mkdir /app/resources
@@ -19,8 +19,7 @@ RUN chmod -R 755 /app
 
 USER $APPLICATION_USER
 
-COPY --from=build /appbuild/build/libs/KtorEasy*all.jar /app/KtorEasy.jar
-COPY --from=build /appbuild/resources/ /app/resources/
+COPY --from=build /appbuild/build/libs/KtorEasy.jar /app/KtorEasy.jar
+COPY --from=build /appbuild/src/main/resources/ /app/resources/
 WORKDIR /app
-
-CMD ["sh", "-c", "java -server -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:InitialRAMFraction=2 -XX:MinRAMFraction=2 -XX:MaxRAMFraction=2 -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:+UseStringDeduplication -jar KtorEasy.jar"]
+ENTRYPOINT ["java","-jar","/app/KtorEasy.jar"]
